# ResumeRocket

./: .dockerignore  .gitignore  About the job.md  Dockerfile  README.md  app.py  apply_migration.py  dev.py  fix.txt  fix_script.py  fly.toml  frontend.md  main.py  migrate.py  models.py  prompt_caching.md  prompt_caching_plan.md  pyproject.toml  run.py  spec.md  streaming.md  streaming_customization_spec.md  test_plan.md  todo.md  upgrade_spec.md
attached_assets/: MIGRATION_GUIDE.md  Pasted-DEBUG-anthropic-base-client-Sending-HTTP-Request-POST-https-api-anthropic-com-v1-messages-DEBUG--1741331333633.txt  Pasted-DEBUG-anthropic-base-client-Sending-HTTP-Request-POST-https-api-anthropic-com-v1-messages-DEBUG--1741368897856.txt  Pasted-DEBUG-anthropic-base-client-Sending-HTTP-Request-POST-https-api-anthropic-com-v1-messages-DEBUG--1741369332576.txt  Pasted-DEBUG-app-Form-data-received-ImmutableMultiDict-resume-Joshua-Oliphant-n-n360-333-0114-n-jo-1741317854314.txt  Pasted-DEBUG-app-Form-data-received-ImmutableMultiDict-resume-Joshua-Oliphant-n-n360-333-0114-n-jo-1741318232889.txt  Pasted-DEBUG-app-Form-data-received-ImmutableMultiDict-uploadType-file-resume-jobDescr-1741411507041.txt  Pasted-DEBUG-httpcore-http11-receive-response-headers-complete-return-value-b-HTTP-1-1-200-b-OK-b-D-1741329964623.txt  Pasted-ERROR-app-Exception-on-api-job-url-POST-Traceback-most-recent-call-last-File-home-runner-w-1741325950647.txt
backend/: __init__.py  app.py  extensions.py  main.py  models.py
docs/: DEPLOYMENT.md  NEXTJS_FLASK_SETUP.md  anthropic_prompt_caching.md  api_standardization_guide.md  htmx_error_handling.md  pdf_extraction.md  prompt_caching.md  (+1 more)
routes/: admin.py  (+4 more)
(+178 files in other folders)
