[project]
name = "resumerocket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "email-validator>=2.2.0",
    "flask-jwt-extended>=4.7.1",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.5",
    "gunicorn>=23.0.0",
    "nltk>=3.9.1",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "werkzeug>=3.1.3",
    "python-docx>=1.1.2",
    "pypdf2>=3.0.1",
    "filetype>=1.2.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "sqlalchemy>=2.0.38",
    "python-dotenv>=1.0.0",
    "unstructured-client>=0.31.1",
    "unstructured[pdf]>=0.16.25",
    "fpdf>=1.7.2",
]
